Fixed Overflow issue on Home page, Made type border edits

--- a/www/sass/component/_base.scss
+++ b/www/sass/component/_base.scss
@@ -58,14 +58,18 @@ a {
 // border-holder 
 .section-title {
 	.grey {
-		border-top:2px solid $white;
-		border-bottom:2px solid $white;
+		// border-top:2px solid $white;
+		// border-bottom:2px solid $white;
+		border-top:2px solid $black;
+		border-bottom:2px solid $black;
 		color:$black;
 	}
 
 	.black {
-		border-top:2px solid $white;
-		border-bottom:2px solid $white;
+		// border-top:2px solid $white;
+		// border-bottom:2px solid $white;
+		border-top:2px solid $black;
+		border-bottom:2px solid $black;
 		color:#ffffff;
 	}
 
